--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ body {
   overflow: hidden;
   transform: scale(0);
 }
-.circle div:nth-child(1) { background-color: #009944; }
-.circle div:nth-child(2) { background-color: #fff100; }
-.circle div:nth-child(3) { background-color: #ff0000; }
-.circle div:nth-child(4) { background-color: #00a0e9; }
+.circle div:nth-child(1) { background-color: #EC7092; }
+.circle div:nth-child(2) { background-color: #3A75BB; }
+.circle div:nth-child(3) { background-color: #F7DE8C; }
+.circle div:nth-child(4) { background-color: #B0C5E4; }
 .circle div:nth-child(5) { background-color: #0a9b94; }
 
 .circle div:nth-child(1) { animation: scale 0.6s ease 0.5s forwards; }
